Fix for issue #2 Add feedback that the program is still running for long running searches. It now outputs "searching..." with more dots added over time, as the search progresses.
git-svn-id: https://fslint.googlecode.com/svn/trunk@10 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,6 +1,8 @@
 2.17 dd/mm/yy
 	* Updated translations: Swedish.
 	* Support building SuSE specific RPMs from the tarball.
+	* Give updating "searching...." status, to ensure that
+	  users know the program is still running.
 
 2.16 02/07/06
 
