--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,5 +1,16 @@
 2.17 dd/mm/yy
 	* Updated translations: Swedish.
+	* Fix a bug introduced in 2.15 wrt the independent hardlinks fix.
+	  The bug was essentially that duplicates would only
+          be found within one filesystem of the specififed search path(s).
+	  Note this bug only affects systems with findutils >= 4.2
+	  This bug was reported and fixed by Robert Seczkowski.
+	* Make disk head seeks more efficient when finding duplicates,
+	  in the case where multiple filsystems on the same physical
+	  disk are being checked.
+	* When merging duplicates using hardlinks, and those duplicates
+	  are on different filesystems, use symlinks rather than just
+	  deleting the files.
 	* Support building SuSE specific RPMs from the tarball.
 	* Give updating "searching...." status, to ensure that
 	  users know the program is still running.
