Give an explanation in the status field for each function (tab). This comes from debian bug report #379999
git-svn-id: https://fslint.googlecode.com/svn/trunk@12 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -14,6 +14,7 @@
 	* Support building SuSE specific RPMs from the tarball.
 	* Give updating "searching...." status, to ensure that
 	  users know the program is still running.
+	* Give an explanation in the status field for each function (tab).
 
 2.16 02/07/06
 
