Display all errors from an operation, not just the last. Display any errors from "save results" operation.
git-svn-id: https://fslint.googlecode.com/svn/trunk@13 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -15,6 +15,8 @@
 	* Give updating "searching...." status, to ensure that
 	  users know the program is still running.
 	* Give an explanation in the status field for each function (tab).
+	* Display all errors from an operation, not just the last.
+	* Display any errors from "save results" operation.
 
 2.16 02/07/06
 
