--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 fslint (2.17-1) unstable; urgency=low
 
+  * Bump to release version
+
+ -- Pádraig Brady <P@draigBrady.com>  Thu, 25 Dec 2006 23:54:00 +0000
+
+fslint (2.17-1) unstable; urgency=low
+
   * Bump to devel version
 
  -- Pádraig Brady <P@draigBrady.com>  Thu, 28 Nov 2006 17:25:30 +0000
