--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fslint (2.19-1) unstable; urgency=low
+
+  * Bump to devel version
+
+ -- Pádraig Brady <P@draigBrady.com>  Thu, 26 Dec 2006 14:54:00 +0000
+
 fslint (2.18-1) unstable; urgency=low
 
   * Bump to release version
