Modify Danish for "within groups" with feeback from Jow Dalton.
git-svn-id: https://fslint.googlecode.com/svn/trunk@32 494acc53-a219-0410-adff-8f8ff343f446

--- a/po/da.po
+++ b/po/da.po
@@ -32,7 +32,7 @@ msgstr "Fravælg med jokertegn"
 
 #: ../fslint.glade:86
 msgid "within groups"
-msgstr "på grupper"
+msgstr "Indenfor grupper"
 
 #: ../fslint.glade:95
 msgid "Select all but first"
