Update NEWS for previous commits
git-svn-id: https://fslint.googlecode.com/svn/trunk@39 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -6,6 +6,10 @@
 		  Previously I used the "Application" category which is fedora
 		  specific. I now use only freedesktop standard categories.
 		* Fix minor lintian warning in debian/control file.
+	* Improvements:
+		* Reduce CPU usage by 35% when finding dups.
+		* Handle large, same sized files with differing content
+		  more efficiently, when finding dups.
 
 2.18 25/12/06
 	* Translations:
@@ -27,7 +31,7 @@
 		* Support building SuSE specific RPMs from the tarball.
 		* Simplify debian package so that it builds with dash.
 		* Add gentoo ebuild from Cédrick Gaillard to web site.
-	* GUI improvments:
+	* GUI improvements:
 		* Give updating "searching...." status, to ensure that users
 		  know the program is still running.
 		* Give an explanation in status field for each function (tab).
