Add md5sum_approx to packages
git-svn-id: https://fslint.googlecode.com/svn/trunk@41 494acc53-a219-0410-adff-8f8ff343f446

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+fslint (2.19-2) unstable; urgency=low
+
+  * add md5sum_approx
+
 fslint (2.19-1) unstable; urgency=low
 
   * Bump to devel version
