Update version to release version 2.20 Update copyright year to 2007 Update package descriptions to make them easier to find in repos
git-svn-id: https://fslint.googlecode.com/svn/trunk@44 494acc53-a219-0410-adff-8f8ff343f446

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+fslint (2.20-1) unstable; urgency=low
+
+  * Update description to make FSlint easier to find (bug 413907)
+  * Bump to release version
+
+ -- Pádraig Brady <P@draigBrady.com>  Fri, 09 Mar 2007 07:54:00 +0000
+
 fslint (2.19-2) unstable; urgency=low
 
   * add md5sum_approx
