Remove redundant recursion in human_num() and also ensure that all numbers are output appropriate to locale. For example, output 1,2K in es_ES instead of 1.2K
git-svn-id: https://fslint.googlecode.com/svn/trunk@47 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,3 +1,7 @@
+2.21 dd/mm/yy
+	* Improvements:
+		* Ensure all numbers are output appropriate to locale.
+
 2.20 09/03/07
 	* Translations:
 		* Updated: Danish.
