Fix small typo in Chinese translation
git-svn-id: https://fslint.googlecode.com/svn/trunk@50 494acc53-a219-0410-adff-8f8ff343f446

--- a/po/zh.po
+++ b/po/zh.po
@@ -402,7 +402,7 @@ msgstr "包"
 #: ../fslint-gui:700
 #, fuzzy, python-format
 msgid "consuming %sB. "
-msgstr "消耗 %sB"
+msgstr "消耗 %sB. "
 
 #: ../fslint-gui:701
 #, python-format
