Update to devel version
git-svn-id: https://fslint.googlecode.com/svn/trunk@51 494acc53-a219-0410-adff-8f8ff343f446

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fslint (2.21-1) unstable; urgency=low
+
+  * Bump to devel version
+
+ -- Pádraig Brady <P@draigBrady.com>  Fri, 30 Mar 2007 08:22:00 +0000
+
 fslint (2.20-1) unstable; urgency=low
 
   * Update description to make FSlint easier to find (bug 413907)
