Add an indenting checker/fixer to the "redundant whitespace" function. This finds text files with erroneous mixing of tabs and spaces in the indenting at the start of a line.
The spanish translation was updated for this also.

Note I also removed the translations for 'Yes', 'No', 'Cancel'
from all the translations, as they were only used for GTK+ buttons,
and stock buttons for those are always available.


git-svn-id: https://fslint.googlecode.com/svn/trunk@52 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -3,6 +3,10 @@
 		* Added: Spanish.
 	* Improvements:
 		* Ensure all numbers are output appropriate to locale.
+		* Add an indenting checker/fixer to the "redundant whitespace"
+		  function. This checks for erroneous mixing of tabs and spaces
+		  in the indenting at the start of a line, and the user
+		  can select to fix with tabs or spaces.
 
 2.20 09/03/07
 	* Translations:
