Position user dialogs correctly over the main FSlint window (by setting them to hidden in the glade file, and only showing when appropriate). Also don't leak the memory for each dialog. Note the mem will still leak in pygtk (libglade) prior to version 2.8 due to gnome bug 317172
git-svn-id: https://fslint.googlecode.com/svn/trunk@54 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -7,6 +7,9 @@
 		  function. This checks for erroneous mixing of tabs and spaces
 		  in the indenting at the start of a line, and the user
 		  can select to fix with tabs or spaces.
+	* Fixes:
+		* Position dialogs correctly over the FSlint window,
+		  and also don't leak the dialog memory.
 
 2.20 09/03/07
 	* Translations:
