Change popup (selection) menu so that it (dis)appears in response to more standard user events. I.E. use standard click for button and for right click on the clist, add an event.time parameter, so that the menu persists after the right click is released.
git-svn-id: https://fslint.googlecode.com/svn/trunk@55 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -10,6 +10,9 @@
 	* Fixes:
 		* Position dialogs correctly over the FSlint window,
 		  and also don't leak the dialog memory.
+		* Change popup (selection) menu so that it (dis)appears
+		  in response to more standard user events. This issue was
+		  identified by Bruce Byfield.
 
 2.20 09/03/07
 	* Translations:
