Ignore paths (indirectly) specified multiple times, by doing a `sort -u` right after the `find`
git-svn-id: https://fslint.googlecode.com/svn/trunk@58 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -7,6 +7,7 @@
 		  function. This checks for erroneous mixing of tabs and spaces
 		  in the indenting at the start of a line, and the user
 		  can select to fix with tabs or spaces.
+		* Ignore paths (indirectly) specified multiple times.
 	* Fixes:
 		* Position dialogs correctly over the FSlint window,
 		  and also don't leak the dialog memory.
