Remove the cross device restriction in the `findup -m` command. I.E. when trying to merge from the command line allow spanning different filesystems.
This is not necessary now since I supported symlink merging in 2.18
and currently (2.22) as I made the hardlink merging more robust.
Also it gives a warning with newer findutils where I didn't
put the -xdev option at the start (which was reported in debian bug #426522).



git-svn-id: https://fslint.googlecode.com/svn/trunk@66 494acc53-a219-0410-adff-8f8ff343f446

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 fslint (2.21-1) unstable; urgency=low
 
   * Bump to devel version
+  * Remove findup -m cross device limitation (Closes: #426522)
 
  -- Pádraig Brady <P@draigBrady.com>  Fri, 30 Mar 2007 08:22:00 +0000
 
