--- a/doc/NEWS
+++ b/doc/NEWS
@@ -13,6 +13,7 @@
 	* Fixes:
 		* Change duplicate file merging algorithm to be more robust in
 		  rare error conditions, to eliminate any chance of data loss.
+		* Remove the cross device restriction from `findup -m`.
 		* Position dialogs correctly over the FSlint window,
 		  and also don't leak the dialog memory.
 		* Change popup (selection) menu so that it (dis)appears
