Handle pathc containing '\n' characters. Mostly we just ingore these paths. Bug reported by Bjørn Ingmar Berg (a python error in findup)
git-svn-id: https://fslint.googlecode.com/svn/trunk@68 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -22,6 +22,9 @@
 		* Ignore paths (indirectly) specified multiple times.
 		  This would cause duplicate file merging to break
 		  resulting in a file being deleted and not linked to a copy.
+		* Handle paths containing '\n' characters.
+		  Previously this would cause various errors to be output.
+		  Bug report from Bjørn Ingmar Berg.
 
 2.20 09/03/07
 	* Translations:
