Missed part of translation fix in r53
git-svn-id: https://fslint.googlecode.com/svn/trunk@69 494acc53-a219-0410-adff-8f8ff343f446

--- a/po/fslint.pot
+++ b/po/fslint.pot
@@ -312,11 +312,11 @@ msgid "Usage: %s [OPTION] [PATHS]"
 msgstr ""
 
 #: ../fslint-gui:142
-msgid "    --version       display version"
+msgid "display version"
 msgstr ""
 
 #: ../fslint-gui:143
-msgid "    --help          display help"
+msgid "display help"
 msgstr ""
 
 #: ../fslint-gui:330
