Simplify/Cleanup/Optimize the default output from findup. The default output can now be easily piped into other tools. The --sizes option now uses `du -B1` and so will report the actual disk usage as expected.
git-svn-id: https://fslint.googlecode.com/svn/trunk@70 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -10,6 +10,8 @@
 		* Set mouse pointer to "busy interactive" during searches.
 		  This makes it more obvious that work is progressing and
 		  only parts of the GUI will be responsive.
+		* Simplify the default output from the findup CLI tool, to make
+		  it easier to pipe. Use the --sizes option to get old format.
 	* Fixes:
 		* Change duplicate file merging algorithm to be more robust in
 		  rare error conditions, to eliminate any chance of data loss.
