Change to valid email as launcpad.net can't parse the name/id of the translator correctly.
git-svn-id: https://fslint.googlecode.com/svn/trunk@73 494acc53-a219-0410-adff-8f8ff343f446

--- a/po/pt.po
+++ b/po/pt.po
@@ -9,8 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-04-20 08:42+0100\n"
 "PO-Revision-Date: 2004-06-04 10:32+0100\n"
-"Last-Translator: Helder Garcia <AT-DOT-DOT hlbog-sounerd-com-br>\n"
-"Language-Team: Helder Garcia <AT-DOT-DOT hlbog-sounerd-com-br>\n"
+"Last-Translator: Helder Garcia <hlbog@sounerd.com.br>\n"
+"Language-Team: Helder Garcia <hlbog@sounerd.com.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
